Debug builds one at a time

--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -13,17 +13,19 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ruby: [2.3, 2.7, 3.0]
+        ruby: [3.0]
         operating-system: [ubuntu-latest]
-        include:
-          - ruby: head
-            operating-system: ubuntu-latest
-          - ruby: truffleruby-head
-            operating-system: ubuntu-latest
-          - ruby: 2.7
-            operating-system: windows-latest
-          - ruby: jruby-head
-            operating-system: windows-latest
+        # ruby: [2.3, 2.7, 3.0]
+        # operating-system: [ubuntu-latest]
+        # include:
+        #   - ruby: head
+        #     operating-system: ubuntu-latest
+        #   - ruby: truffleruby-head
+        #     operating-system: ubuntu-latest
+        #   - ruby: 2.7
+        #     operating-system: windows-latest
+        #   - ruby: jruby-head
+        #     operating-system: windows-latest
 
     name: Ruby ${{ matrix.ruby }} on ${{ matrix.operating-system }}
 
