--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ruby: [3.0]
+        ruby: [2.3, 2.7, 3.0, 3.1, head]
         operating-system: [ubuntu-latest]
         # ruby: [2.3, 2.7, 3.0]
         # operating-system: [ubuntu-latest]
