--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -10,21 +10,17 @@ on:
 jobs:
   continuous_integration_build:
     continue-on-error: true
+
     strategy:
       fail-fast: false
       matrix:
-        ruby: [2.3, 2.7, 3.0, 3.1, head]
+        ruby: [2.7, 3.0, 3.1, head, jruby-9.4.0.0, jruby-head]
+        # ruby: [2.7, 3.0, 3.1, head, jruby-9.4.0.0, jruby-head, truffleruby-head]
         operating-system: [ubuntu-latest]
-        # ruby: [2.3, 2.7, 3.0]
-        # operating-system: [ubuntu-latest]
         # include:
-        #   - ruby: head
-        #     operating-system: ubuntu-latest
-        #   - ruby: truffleruby-head
-        #     operating-system: ubuntu-latest
-        #   - ruby: 2.7
+        #   - ruby: 3.1
         #     operating-system: windows-latest
-        #   - ruby: jruby-head
+        #   - ruby: jruby-9.4.0.0
         #     operating-system: windows-latest
 
     name: Ruby ${{ matrix.ruby }} on ${{ matrix.operating-system }}
