--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -15,11 +15,10 @@ jobs:
       fail-fast: false
       matrix:
         ruby: [2.7, 3.0, 3.1, head, jruby-9.4.0.0, jruby-head]
-        # ruby: [2.7, 3.0, 3.1, head, jruby-9.4.0.0, jruby-head, truffleruby-head]
         operating-system: [ubuntu-latest]
-        # include:
-        #   - ruby: 3.1
-        #     operating-system: windows-latest
+        include:
+          - ruby: 3.1
+            operating-system: windows-latest
         #   - ruby: jruby-9.4.0.0
         #     operating-system: windows-latest
 
