--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -19,8 +19,8 @@ jobs:
         include:
           - ruby: 3.1
             operating-system: windows-latest
-        #   - ruby: jruby-9.4.0.0
-        #     operating-system: windows-latest
+          - ruby: jruby-9.4.0.0
+            operating-system: windows-latest
 
     name: Ruby ${{ matrix.ruby }} on ${{ matrix.operating-system }}
 
